--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -11,11 +11,14 @@ jobs:
 
     steps:
       -
-         name: Checkout
-         uses: actions/checkout@v1
+        name: Checkout
+        uses: actions/checkout@v1
       -
-         name: Build
-         run: npm run build
+        name: Install
+        run: npm ci
+      -
+        name: Build
+        run: npm run build
       -
         name: Deploy
         if: success()
