--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v1
       -
         name: Lint
-        uses: npm run lint
+        run: npm run lint
       -
         name: Vulnerability Scsan
-        uses: npm audit
+        run: npm audit
