--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -15,6 +15,9 @@ jobs:
         name: Checkout
         uses: actions/checkout@v1
       -
+        name: Install
+        run: npm install
+      -
         name: Lint
         run: npm run lint
       -
