--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "cross-env ./scripts/build.sh",
     "clean": "rimraf dist",
+    "lint": "npm-run-all lint:*",
     "lint:md": "markdownlint **/*.md --ignore node_modules",
     "release": "release-it"
   },
@@ -11,13 +12,11 @@
   "devDependencies": {
     "clean-css-cli": "^4.3.0",
     "cross-env": "^6.0.3",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.19.1",
     "html-minifier": "^4.0.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "markdownlint-cli": "^0.20.0",
+    "npm-run-all": "^4.1.5",
     "release-it": "^12.4.3",
     "rimraf": "^3.0.0",
     "showdown": "^1.9.1"
