--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -18,10 +18,10 @@ jobs:
         run: chmod -R 777 ./scripts/
       -
         name: Install
-        run: npm ci
+        run: yarn
       -
         name: Build
-        run: npm run build
+        run: yarn run build
       -
         name: Deploy
         if: success()
