--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/checkout@v1
       -
         name: Install
-        run: npm install
+        run: yarn
       -
         name: Lint
-        run: npm run lint
+        run: yarn run lint
       -
         name: Vulnerability Scsan
-        run: npm audit
+        run: yarn audit
