--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "scripts": {
     "build": "cross-env ./scripts/build.sh",
     "clean": "rimraf dist",
-    "lint": "npm-run-all lint:*",
-    "lint:md": "prettier --write **/*.md",
     "release": "release-it"
   },
   "dependencies": {},
@@ -15,8 +13,6 @@
     "html-minifier": "^4.0.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
-    "markdownlint-cli": "^0.20.0",
-    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "release-it": "^12.4.3",
     "rimraf": "^3.0.0",
@@ -29,7 +25,7 @@
     }
   },
   "lint-staged": {
-    "*.md": [
+    "*.{html,js,json,md,yaml,yml}": [
       "prettier --write",
       "git add"
     ]
