--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "lint-staged": {
     "*.{html,js,json,md,yaml,yml}": [
-      "prettier --write",
+      "prettier --prose-wrap always --write",
       "git add"
     ]
   },
