--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "cross-env ./scripts/build.sh",
     "clean": "rimraf dist",
+    "dev": "cross-env ./scripts/dev.sh",
     "release": "release-it"
   },
   "dependencies": {},
@@ -13,10 +14,12 @@
     "html-minifier": "^4.0.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
+    "live-server": "^1.2.1",
     "prettier": "^1.19.1",
     "release-it": "^12.4.3",
     "rimraf": "^3.0.0",
-    "showdown": "^1.9.1"
+    "showdown": "^1.9.1",
+    "watch": "^1.0.2"
   },
   "private": true,
   "husky": {
