--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "dependencies": {},
   "devDependencies": {
     "clean-css-cli": "^4.3.0",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.2",
     "html-minifier": "^4.0.0",
-    "husky": "^3.1.0",
-    "lint-staged": "^9.5.0",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.9",
     "live-server": "^1.2.1",
-    "prettier": "^1.19.1",
-    "release-it": "^12.4.3",
+    "prettier": "^2.0.2",
+    "release-it": "^13.3.0",
     "rimraf": "^3.0.0",
     "showdown": "^1.9.1",
     "watch": "^1.0.2"
@@ -28,10 +28,7 @@
     }
   },
   "lint-staged": {
-    "*.{html,js,json,md,yaml,yml}": [
-      "prettier --prose-wrap always --write",
-      "git add"
-    ]
+    "*.{html,js,json,md,yaml,yml}": "prettier --prose-wrap always --write"
   },
   "release-it": {
     "git": {
